--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    height: auto;
+    width: auto;
+    background-color: #2e2c2ce3;
+    font-family: "Satisfy", cursive;
+    color: white;
+    padding: 10px;
+}
