modificando funcion agregar nueva mesa

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,3 +22,35 @@
 .resaltador:hover{
     border-bottom-color: red;
 }
+
+
+.espacio1 {
+    margin-left: 10px;
+}
+
+.espacio2 {
+    margin-top: -10px;
+}
+
+
+
+.recuadro_principal{
+    font-family: 'Courier New', Courier, monospace;
+    border: 8px solid #053b62;
+    width: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px; 
+    align-items: center;
+}
+
+
+.recuadro_secundario{
+    font-family: 'Courier New', Courier, monospace;
+    border: 3px solid #053b62;
+    width: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px; 
+    align-items: center;
+}
