--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,7 +18,10 @@ El class se puede utilizar reiteradas veces y en css se inicializa con el .
 .menu1{
     color: rgb(125, 130, 145)e3;
     background-color: #4d4d52;
+/*
     font-size: 40px;
+*/
+    font-size: larger;
     padding: 10px 90px 5px 10px;
     margin-top: 10px;
     margin-left: -10px;
