--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -322,80 +322,66 @@
 
 
 
-<div class = "recuadro_principal container">
-    <h1>Agregar un producto a una mesa</h1>
-    <p>
-        <label> Mesas</label>
-        <select [formControl] = "numeroMesa" >      
-            <option *ngFor = "let mesa of mesas" value={{mesa.numero_mesa}}> 
-                Numero de la mesa "{{mesa.numero_mesa}}"
-            </option>
-      </select>
-    </p>
-        <p> <label> Productos </label> </p>
-        <select [formControl] = "numeroDeProducto" >
-                <option *ngFor = "let producto of productos" value={{producto.numeroProducto}}> 
-                    {{producto.numeroProducto}} | {{producto.nombre}} | ${{producto.precio}}
-                </option>
-        </select> 
-    
-    <p> <input type = "button" value = "Enviar" (click) = "actualizar()"> </p>
-</div>
+
+
+
+
+
+
+
+
+
+
 
 
 <div class = "recuadro_principal container">
-    <h1> Agregar mas de un producto</h1>
-    <p>
-        <label> Mesas</label>
-        <select [formControl] = "numeroMesa" >      
-            <option *ngFor = "let mesa of mesas" value={{mesa.id}}> 
-                Numero de la mesa "{{mesa.numero_mesa}}"
-            </option>
-      </select>
-    </p>
-    <p> <label> Productos </label> </p>
-    <p>
-        <select [formControl] = "numeroDeProducto" >
-            <option *ngFor = "let producto of productos" value={{producto.numeroProducto}}> 
-                {{producto.numeroProducto}} | {{producto.nombre}} | {{producto.precio}}
-            </option>
-        </select>
-    </p>
-        <input type = "button" value = "AgregarProducto" (click) = "agregarMuchosProductos()">
-        
-        <div class = "recuadro_secundario">
-            <p *ngFor = "let producto of listaProductos2">
-                {{producto.numeroProducto}} | {{producto.nombre}} | ${{producto.precio}}
+    <h2 id = "ir_cobrar"> Cerrar </h2>
+    <h4>Cobrar un producto o una Mesa</h4>
+    <select [formControl] = "numeroMesa" >      
+        <option *ngFor = "let mesa of mesas" value={{mesa.numero_mesa}}> 
+            Numero de la mesa "{{mesa.numero_mesa}}"           
+        </option>
+    </select>
+    <button (click)="verUnaMesa()"> Ver/Ocultar Mesa </button>
 
-<!--           
-                <button class ="small"value = "{{producto.numeroProducto}}"(click)="eliminarProductoDeLaLista2($event)" > Eliminar Producto </button>
--->
-            </p>
+    <div class="recuadro_secundario" *ngIf="verUnaMesaBool" >
+     
+        <div class="recuadro_secundario small">
+            <h6> Productos sin cobrar: </h6>
+            <label *ngFor = "let producto of mesaUnica.listaProductos" > 
+                <ul>
+                    Numero de producto: {{producto.numeroProducto}} | {{producto.nombre}} | ${{producto.precio}} | cobrado:(producto.cobrado)
+                    <button value="{{producto.id}}" (click)="cobrarProducto($event)" [disabled]=""> CobrarProducto </button>
+                </ul>                  
+            </label>
         </div>
-        <p> <input type = "button" value = "EnviarMuchosProductos" (click) = "enviandoMuchosProductos()"> </p>
+        <div class = "recuadro_secundario">
+            <h6>Productos cobrados:</h6>
+            <label *ngFor=" let producto of mesaUnica.productosCobrados">
+                <ul>
+                    Numero de producto: {{producto.numeroProducto}} | {{producto.nombre}} | ${{producto.precio}} | cobrado:{{producto.cobrado)
+                    <button value="{{producto.id}}" (click)="deshacerCambioCobrarProducto($event)" [disabled]=""> Deshacer cambio </button>
+                </ul>
+            </label>
+        </div>
 
+        
+        <ul>
+            Precio Total de la mesa = {{mesaUnica.precioTotal}}        
+        </ul>
+        <ul>
+            Ya abonado de la mesa = {{mesaUnica.precioTemporal}}        
+        </ul>
+        <ul>
+            Resta abonar total de la mesa = {{mesaUnica.precioTotal - mesaUnica.precioTemporal}}
+        </ul>
+    </div>
+    <p> <button (click)="actualizarMesaModificada()" [disabled]="verUnaMesaBool == false"> Cobrar y Cerrar una mesa </button> </p>
 </div>
 
 
 
 
-
-
-
-<h1 class = "espacio"> . </h1>
-
-<h1 id = "ir_cobrar"> Cobrar Una Mesa </h1>
-<p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa non beatae voluptatem reprehenderit laudantium vitae architecto aliquid! Praesentium autem commodi architecto. Culpa iusto ipsa, fugiat corrupti voluptatum quos natus officia nemo minus ullam rerum atque numquam harum. Sit rem commodi eius veritatis nihil ipsum debitis deserunt sapiente est laudantium ratione a deleniti dolore mollitia sed, possimus ullam nulla consequuntur et quis quidem? Veritatis voluptas itaque quidem repellendus omnis officiis et modi voluptatem dolor maxime nisi voluptates aut quos placeat obcaecati qui iste, iusto corrupti molestiae sequi laudantium? Iure aut saepe unde quas rem? Facere inventore quidem voluptas quis nihil, vitae ut, nobis pariatur nemo velit iure repellendus. Quasi voluptas, architecto fugit voluptate omnis quos harum assumenda ipsam reprehenderit suscipit culpa sunt iure dolorem non, nisi aperiam praesentium ipsum excepturi necessitatibus ut, illum numquam eligendi voluptates? Nemo quaerat nam obcaecati? Natus debitis suscipit consequuntur quidem reprehenderit nam quos eveniet quibusdam libero, deleniti ipsum dolorum culpa officia tenetur dolore modi, amet autem nesciunt? Voluptates minima minus repudiandae excepturi, nesciunt atque totam, ut iure, neque quisquam dolor amet aperiam explicabo inventore natus maiores qui ea debitis tempora nobis sit unde. Praesentium eum accusantium eius delectus autem animi quas deleniti, natus ratione maiores et voluptatibus vero omnis doloribus minus aut perferendis iure sed! Animi itaque provident velit maxime ipsum expedita perferendis minima aperiam, vel ducimus corporis eius cupiditate, impedit eligendi deleniti sit veritatis accusamus labore numquam soluta. Adipisci nemo cupiditate praesentium impedit ut magni maxime soluta esse earum hic ipsum velit totam beatae natus delectus expedita, deleniti error est aspernatur omnis iusto eos consequatur? Maxime odit, vero obcaecati ullam reprehenderit quo nam deleniti, libero quibusdam voluptates expedita quasi. Quaerat, obcaecati. Perferendis repellendus culpa, alias rerum maiores, minus eius obcaecati neque adipisci est sint dolore. Expedita iste accusantium, pariatur placeat eius nemo quisquam dolorem cumque, excepturi ut dolores nobis corrupti, omnis recusandae! Accusantium nulla maxime voluptatem nostrum minima quisquam nam ipsam ad sint quibusdam? Sed incidunt aut ipsam, dolores nihil nostrum? Consectetur quod iusto praesentium maxime error nobis officiis impedit consequuntur, possimus earum, incidunt debitis sapiente. Illo provident praesentium fugiat reiciendis obcaecati tempora aperiam, ullam quibusdam aspernatur fuga minus, iure mollitia expedita reprehenderit. Saepe iusto nobis libero quisquam omnis soluta accusantium eum magni voluptatibus? Nulla facilis, incidunt debitis inventore ab harum sint saepe deserunt illum! Sunt illum aliquid magnam quam assumenda nihil veritatis, expedita dolorum asperiores quod rem quisquam repellat molestias veniam eaque mollitia minima enim voluptatibus quibusdam iusto tenetur neque, dolores ipsum. Quibusdam amet accusamus natus, minus iste rerum dolores ea excepturi voluptatum voluptates ipsa quia molestias unde, recusandae aspernatur delectus animi ex saepe fugit libero sed nam, praesentium officia. Numquam quae, corporis enim accusantium rem quo temporibus unde provident ducimus explicabo illum nam laudantium magnam ex corrupti obcaecati nobis nesciunt consequuntur. Est, sed magni esse odio obcaecati atque tenetur maiores voluptates molestias. Aliquid molestias ipsam iste eveniet assumenda et repellendus praesentium voluptas, laudantium explicabo? Corrupti officia voluptatem cumque consequuntur itaque consectetur fuga, ab, libero optio officiis ratione modi doloribus enim maiores soluta voluptatibus mollitia impedit sapiente qui culpa, inventore placeat? Libero quasi expedita modi quis, minima ea tenetur iusto, necessitatibus velit, illo quia cum. Illo, natus ipsam explicabo alias ea eum? Rerum consequatur vero voluptatum exercitationem magnam nulla consectetur illo vel. Nam ratione quam laborum voluptatibus quas aspernatur vel commodi in, at nisi fuga necessitatibus, velit iste ipsa sequi fugit quidem aperiam? Repudiandae id quisquam cumque accusamus sit quam omnis tempora asperiores saepe, blanditiis dolorum? Ipsam numquam earum magnam quod totam. Adipisci nisi esse architecto temporibus. Atque odit culpa unde possimus suscipit voluptate sint optio amet distinctio cum aut nostrum recusandae minima, sed tempora corporis consequatur, necessitatibus neque labore ad deserunt asperiores? Illo impedit quo rerum provident exercitationem recusandae reprehenderit corrupti sed soluta iusto, adipisci totam dolorum dicta eum? Totam vitae recusandae deserunt. Modi atque vero cupiditate similique quis sint enim, eveniet laudantium, nemo natus libero! Libero impedit assumenda ullam nemo rerum eaque ratione, beatae totam consequuntur, voluptatum doloribus magni accusantium. Explicabo facere molestias impedit aliquam, temporibus ullam at repudiandae labore, optio quod magnam recusandae. Neque esse fugiat magnam delectus et perspiciatis ea corrupti. Illo totam dignissimos itaque, delectus harum molestias veniam est vitae maiores iure ratione beatae odit porro provident culpa architecto dolor eos corporis vel aliquid. Quasi facilis repellendus, nulla totam officia excepturi quia ipsum nam distinctio aliquid. Voluptatem eum veritatis ratione deleniti! Molestiae nihil suscipit cupiditate eligendi quos ex odio at placeat similique impedit architecto blanditiis delectus ab officiis, cumque dicta molestias quas illo alias voluptates nobis sit commodi. Delectus laboriosam quod corrupti fugiat labore eius iste totam obcaecati assumenda autem sapiente animi, quibusdam possimus ducimus doloremque ad deserunt magnam odit, expedita repellendus? Natus non voluptatum quidem, dolore tenetur sint earum amet quos distinctio fugiat. Iure officiis quisquam ratione ex illum hic perferendis quas natus dolor id, blanditiis eaque. Impedit at sequi cupiditate quam temporibus sapiente quisquam minima similique laboriosam minus nulla tempore aliquid voluptates ut nihil, tenetur ratione id animi maxime dolorum culpa. Cupiditate adipisci beatae animi maxime fuga ea harum! Odit consectetur suscipit, repellendus quia iusto necessitatibus laudantium, natus corporis ut a nam dolorem voluptate eligendi laboriosam, aperiam ullam provident doloribus in enim veritatis libero reprehenderit totam! Repellat deleniti corporis soluta fugiat iusto delectus ducimus provident iste cumque eius! Soluta, provident vero alias, sint optio id maiores ipsa, facere aut placeat inventore. Repellendus voluptatem consequatur necessitatibus corrupti culpa perspiciatis inventore asperiores itaque. Exercitationem, quasi earum? Vel eum a ab repellendus doloribus! Omnis eum eligendi quis ratione pariatur, eaque, alias praesentium accusantium labore nulla voluptatibus quasi adipisci officia dolore delectus sed voluptatem quaerat ad, quae quas officiis? Odio rem corrupti illo tempore, beatae maiores, eaque vel asperiores possimus hic enim ab repudiandae autem et quis fuga ipsum vitae expedita? Optio eveniet delectus ipsum voluptatum praesentium reprehenderit perferendis aut labore architecto ad dignissimos adipisci tenetur nihil, ducimus unde numquam. Aperiam dolores est nihil vero aspernatur id ad perferendis autem alias officiis veritatis aliquid tempore, harum saepe exercitationem, laboriosam deleniti fuga! Nesciunt deleniti unde esse nostrum, sequi vitae repellat eum quas.
-</p>
-
-
-
-
-<h1 id = "ir_agregarProducto"> Agregar un Producto a la mesa </h1>
-<p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa non beatae voluptatem reprehenderit laudantium vitae architecto aliquid! Praesentium autem commodi architecto. Culpa iusto ipsa, fugiat corrupti voluptatum quos natus officia nemo minus ullam rerum atque numquam harum. Sit rem commodi eius veritatis nihil ipsum debitis deserunt sapiente est laudantium ratione a deleniti dolore mollitia sed, possimus ullam nulla consequuntur et quis quidem? Veritatis voluptas itaque quidem repellendus omnis officiis et modi voluptatem dolor maxime nisi voluptates aut quos placeat obcaecati qui iste, iusto corrupti molestiae sequi laudantium? Iure aut saepe unde quas rem? Facere inventore quidem voluptas quis nihil, vitae ut, nobis pariatur nemo velit iure repellendus. Quasi voluptas, architecto fugit voluptate omnis quos harum assumenda ipsam reprehenderit suscipit culpa sunt iure dolorem non, nisi aperiam praesentium ipsum excepturi necessitatibus ut, illum numquam eligendi voluptates? Nemo quaerat nam obcaecati? Natus debitis suscipit consequuntur quidem reprehenderit nam quos eveniet quibusdam libero, deleniti ipsum dolorum culpa officia tenetur dolore modi, amet autem nesciunt? Voluptates minima minus repudiandae excepturi, nesciunt atque totam, ut iure, neque quisquam dolor amet aperiam explicabo inventore natus maiores qui ea debitis tempora nobis sit unde. Praesentium eum accusantium eius delectus autem animi quas deleniti, natus ratione maiores et voluptatibus vero omnis doloribus minus aut perferendis iure sed! Animi itaque provident velit maxime ipsum expedita perferendis minima aperiam, vel ducimus corporis eius cupiditate, impedit eligendi deleniti sit veritatis accusamus labore numquam soluta. Adipisci nemo cupiditate praesentium impedit ut magni maxime soluta esse earum hic ipsum velit totam beatae natus delectus expedita, deleniti error est aspernatur omnis iusto eos consequatur? Maxime odit, vero obcaecati ullam reprehenderit quo nam deleniti, libero quibusdam voluptates expedita quasi. Quaerat, obcaecati. Perferendis repellendus culpa, alias rerum maiores, minus eius obcaecati neque adipisci est sint dolore. Expedita iste accusantium, pariatur placeat eius nemo quisquam dolorem cumque, excepturi ut dolores nobis corrupti, omnis recusandae! Accusantium nulla maxime voluptatem nostrum minima quisquam nam ipsam ad sint quibusdam? Sed incidunt aut ipsam, dolores nihil nostrum? Consectetur quod iusto praesentium maxime error nobis officiis impedit consequuntur, possimus earum, incidunt debitis sapiente. Illo provident praesentium fugiat reiciendis obcaecati tempora aperiam, ullam quibusdam aspernatur fuga minus, iure mollitia expedita reprehenderit. Saepe iusto nobis libero quisquam omnis soluta accusantium eum magni voluptatibus? Nulla facilis, incidunt debitis inventore ab harum sint saepe deserunt illum! Sunt illum aliquid magnam quam assumenda nihil veritatis, expedita dolorum asperiores quod rem quisquam repellat molestias veniam eaque mollitia minima enim voluptatibus quibusdam iusto tenetur neque, dolores ipsum. Quibusdam amet accusamus natus, minus iste rerum dolores ea excepturi voluptatum voluptates ipsa quia molestias unde, recusandae aspernatur delectus animi ex saepe fugit libero sed nam, praesentium officia. Numquam quae, corporis enim accusantium rem quo temporibus unde provident ducimus explicabo illum nam laudantium magnam ex corrupti obcaecati nobis nesciunt consequuntur. Est, sed magni esse odio obcaecati atque tenetur maiores voluptates molestias. Aliquid molestias ipsam iste eveniet assumenda et repellendus praesentium voluptas, laudantium explicabo? Corrupti officia voluptatem cumque consequuntur itaque consectetur fuga, ab, libero optio officiis ratione modi doloribus enim maiores soluta voluptatibus mollitia impedit sapiente qui culpa, inventore placeat? Libero quasi expedita modi quis, minima ea tenetur iusto, necessitatibus velit, illo quia cum. Illo, natus ipsam explicabo alias ea eum? Rerum consequatur vero voluptatum exercitationem magnam nulla consectetur illo vel. Nam ratione quam laborum voluptatibus quas aspernatur vel commodi in, at nisi fuga necessitatibus, velit iste ipsa sequi fugit quidem aperiam? Repudiandae id quisquam cumque accusamus sit quam omnis tempora asperiores saepe, blanditiis dolorum? Ipsam numquam earum magnam quod totam. Adipisci nisi esse architecto temporibus. Atque odit culpa unde possimus suscipit voluptate sint optio amet distinctio cum aut nostrum recusandae minima, sed tempora corporis consequatur, necessitatibus neque labore ad deserunt asperiores? Illo impedit quo rerum provident exercitationem recusandae reprehenderit corrupti sed soluta iusto, adipisci totam dolorum dicta eum? Totam vitae recusandae deserunt. Modi atque vero cupiditate similique quis sint enim, eveniet laudantium, nemo natus libero! Libero impedit assumenda ullam nemo rerum eaque ratione, beatae totam consequuntur, voluptatum doloribus magni accusantium. Explicabo facere molestias impedit aliquam, temporibus ullam at repudiandae labore, optio quod magnam recusandae. Neque esse fugiat magnam delectus et perspiciatis ea corrupti. Illo totam dignissimos itaque, delectus harum molestias veniam est vitae maiores iure ratione beatae odit porro provident culpa architecto dolor eos corporis vel aliquid. Quasi facilis repellendus, nulla totam officia excepturi quia ipsum nam distinctio aliquid. Voluptatem eum veritatis ratione deleniti! Molestiae nihil suscipit cupiditate eligendi quos ex odio at placeat similique impedit architecto blanditiis delectus ab officiis, cumque dicta molestias quas illo alias voluptates nobis sit commodi. Delectus laboriosam quod corrupti fugiat labore eius iste totam obcaecati assumenda autem sapiente animi, quibusdam possimus ducimus doloremque ad deserunt magnam odit, expedita repellendus? Natus non voluptatum quidem, dolore tenetur sint earum amet quos distinctio fugiat. Iure officiis quisquam ratione ex illum hic perferendis quas natus dolor id, blanditiis eaque. Impedit at sequi cupiditate quam temporibus sapiente quisquam minima similique laboriosam minus nulla tempore aliquid voluptates ut nihil, tenetur ratione id animi maxime dolorum culpa. Cupiditate adipisci beatae animi maxime fuga ea harum! Odit consectetur suscipit, repellendus quia iusto necessitatibus laudantium, natus corporis ut a nam dolorem voluptate eligendi laboriosam, aperiam ullam provident doloribus in enim veritatis libero reprehenderit totam! Repellat deleniti corporis soluta fugiat iusto delectus ducimus provident iste cumque eius! Soluta, provident vero alias, sint optio id maiores ipsa, facere aut placeat inventore. Repellendus voluptatem consequatur necessitatibus corrupti culpa perspiciatis inventore asperiores itaque. Exercitationem, quasi earum? Vel eum a ab repellendus doloribus! Omnis eum eligendi quis ratione pariatur, eaque, alias praesentium accusantium labore nulla voluptatibus quasi adipisci officia dolore delectus sed voluptatem quaerat ad, quae quas officiis? Odio rem corrupti illo tempore, beatae maiores, eaque vel asperiores possimus hic enim ab repudiandae autem et quis fuga ipsum vitae expedita? Optio eveniet delectus ipsum voluptatum praesentium reprehenderit perferendis aut labore architecto ad dignissimos adipisci tenetur nihil, ducimus unde numquam. Aperiam dolores est nihil vero aspernatur id ad perferendis autem alias officiis veritatis aliquid tempore, harum saepe exercitationem, laboriosam deleniti fuga! Nesciunt deleniti unde esse nostrum, sequi vitae repellat eum quas.
-</p>
 
 
 <h1 id = "ir_modificarMesa"> Modificar una Mesa </h1>
